fix: overflow hidden

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
     justify-items: center;
 }
 .initial-banner video {
-    position: absolute;
+    position: fixed;
+    overflow: hidden;
     top: 50%;
     left: 50%;
     min-width: 100%;
